hphp/test/slow/parser/hh-reserved-name-float-1.php.expectf
Fatal error: Cannot use `Float` as a type name as it is reserved in %s on line 3
